# Moving_Object_Estimator

./: .dockerignore  .gitignore  .gitmodules  AIRIO.rviz  Dockerfile_Laptop  Makefile  README.md  airio.sh  bag_stepper.py  bashrc_config.txt  docker-compose-nongpu.yaml  docker-compose.yml  result.csv
airio_imu_odometry/: package.xml  setup.cfg  setup.py
airio_imu_odometry/airio_imu_odometry/: airimu_wrapper.py  airio_node copy.py  airio_node.py  airio_node_multi_thread.py  airio_node_single_thread.py  airio_wrapper.py  carto_airio_ekf_node.py  carto_imu_ekf_node.py  ekf_wrapper.py  odom_error_evaluator_node.py  tools.py  velocity_integrator.py
airio_imu_odometry/airio_imu_odometry/nodes/: ate_rte_evaluator.py  imu_result_plot.py  imu_test.py
airio_imu_odometry/config/: carto_airio_ekf_params.yaml  params.yaml
airio_imu_odometry/config/airimu/: codenet.conf  my.conf  train.conf
airio_imu_odometry/config/airio/: MY_body.conf  motion_body_rot.conf  orientation_output.pickle
airio_imu_odometry/launch/: airio_node.launch.py  ate_rte.launch.py  carto_airio_ekf.launch.py
compose/: compose.desktop.yaml  compose.jetson.yaml  compose.yaml
configs/: bashrc_config.txt
containers/: Dockerfile.cuda  Dockerfile.jetson  Dockerfile.nogpu
object_detector/: CMakeLists.txt  package.xml
object_detector/config/: params.yaml
object_detector/expriments/: POTPLscan_aligner_node.cpp  PTP_scan_aligner_node.cpp  gicp_scan_aligner_node.cpp
object_detector/include/: dynamic_obstacle_detector.hpp  ekf_module.hpp  icp_base.hpp  icp_base_impl.hpp  icp_gicp.hpp  icp_point_to_line.hpp  icp_point_to_plane.hpp  icp_point_to_point.hpp  icp_refiner.hpp  map_manager.hpp  map_manager_pair.hpp
object_detector/launch/: icp_comparator.launch.py  object_detect_launch.py
object_detector/msg/: MarkerArrayStamped.msg
object_detector/src/: delay_monitor_node.cpp  icp_comparator_node.cpp  obstacle_detector_node.cpp  scan_aligner_node.cpp  scan_processor_node.cpp
rviz/: AIRIO.rviz  alignment.rviz  mos.rviz  scan_align.rviz
